Adding remaining 11ty and TS dev/prod build setup

--- a/src/index.html
+++ b/src/index.html
@@ -1,2 +1,25 @@
-<h1>Testing Build Process</h1>
-<p>This is a test of the build branch...</p>
+<!doctype html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>React Native Accessibility</title>
+    <link rel="stylesheet" href="/assets/css/styles.css" />
+  </head>
+  <body>
+    <h1>React Native Accessibility</h1>
+    <p>Sample content to test the navigation...</p>
+    <ul>
+      <li><a href="/about/">About</a></li>
+      <li><a href="/contact/">Contact Us</a></li>
+      <li><a href="/sub_folder/">Subfolder home</a></li>
+    </ul>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente,
+      nesciunt quo! Quo aperiam molestias distinctio ducimus tempore, fugiat
+      quibusdam quasi maiores, minima dicta eos illo, eum sunt aliquid assumenda
+      culpa.
+    </p>
+
+    <script src="/assets/js/index.js"></script>
+  </body>
+</html>
