Updated styles and added new design-pattern layout file

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,22 @@ title: React Native Accessibility
 ---
 
 <h1>{{ title }}</h1>
-<p>This site aims to provide accessible design patterns and information on
-   best practices when dealing with React Native</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam at egestas tortor. Phasellus ut est convallis, feugiat neque tincidunt, condimentum augue. Integer imperdiet volutpat eros. Pellentesque sit amet lorem a nisl blandit commodo non eget metus. Sed eget leo sed mauris porttitor dictum. Praesent eget ex posuere, molestie orci eu, imperdiet nisi. Pellentesque aliquam orci non condimentum eleifend. Donec tempor nisl id lectus scelerisque molestie et ac sapien. Vestibulum ultricies facilisis mattis. Donec in faucibus lectus. Integer mi ligula, accumsan et vehicula porta, molestie nec felis.</p>
 
+<p>Sed vel elit nec leo interdum rhoncus a eu ex. Duis a aliquet nibh. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus et libero non tellus pellentesque malesuada a id metus. Maecenas lacinia augue eget lectus laoreet vulputate. Etiam a tincidunt nisl. Suspendisse faucibus semper ante, eget blandit magna eleifend at. Vivamus sodales, nisl quis bibendum pellentesque, leo sem cursus velit, et vulputate diam velit eu nisi. Ut ultrices sit amet elit quis vestibulum. Mauris sodales ac tortor sed eleifend. Vivamus quis blandit lacus.</p>
+<p>This site aims to provide accessible design patterns and information on
+   best practices when dealing with React Native.</p>
+
+<h2>Text Input Fields</h2>
+<p>testing paragraph spacing</p>
 <ul>
   <li>
-    <a href="/design-pattern/TextField/">TextField</a>
+    <a href="/design-pattern/TextField/">Text Field</a>
+  </li>
+  <li>
+    <a href="/design-pattern/TextField-unvisted/">Text Area</a>
+  </li>
+  <li>
+    <a href="/design-pattern/TextField/-visited">Search Field</a>
   </li>
 </ul>
