--- a/src/design-pattern/TextField.html
+++ b/src/design-pattern/TextField.html
@@ -1,11 +1,7 @@
 ---
-layout: base.njk
-title: TextField Design Pattern
+layout: design-pattern.njk
+title: Text Field Design Pattern
 ---
-<h1>{{ title }}</h1>
-<p>
-    <a href="/">Back to Home</a>
-</p>
 <ul>
     <li>abc</li>
 </ul>
